...
                    android:layout_marginBottom="8dp"
                    android:hint="@string/name"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_policy_holder_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

...
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_first_name"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_policy_holder_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

...
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_address"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_policy_holder_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

...
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_postal_code"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_policy_holder_postal_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

...
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_phone_number"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_policy_holder_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

...
                    android:layout_marginBottom="12dp"
                    android:hint="@string/label_email"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_policy_holder_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

...
                        android:layout_marginBottom="8dp"
                        android:hint="@string/label_mark_type"
                        app:boxBackgroundColor="@color/input_field_background"
                        app:boxStrokeColor="@color/primary800">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_statement_vehicle_a_motor_mark_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/input_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

...
                        android:layout_marginBottom="8dp"
                        android:hint="@string/label_registration_number"
                        app:boxBackgroundColor="@color/input_field_background"
                        app:boxStrokeColor="@color/primary800">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_statement_vehicle_a_motor_license_plate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/input_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

...
                        android:layout_marginBottom="12dp"
                        android:hint="@string/label_country_of_registration"
                        app:boxBackgroundColor="@color/input_field_background"
                        app:boxStrokeColor="@color/primary800">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_statement_vehicle_a_motor_country_of_registration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/input_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

...
